# rs-webserver

./: Cargo.toml  README.md  server.lua
controller/: index.lua  testapi.lua
core/: route_handler.lua  view_render.lua
src/: main.rs  webserver.rs
views/: index.view
