[package]
name = "rs-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.7.4", features = ["luajit52", "vendored"] }
threadpool = "1.8.1"
substring = "1.4.5"
urlencoding = "2.1.0"